fixed spacing between headings

--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ Animation keyframes
   line-height: 1.8rem;
   font-size: 2.2rem;
   font-weight: 500;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
   font-family: var(--ff-secondary);
 }
 
